# codebasics-AI-Bootcamp-Assignment-1

./: .gitignore  Assignment_Instruction.md  README.md  run.py
app/: api.py  config.py  embeddings.py  guardrails.py  hr_loader.py  ingestion.py  llm.py  semantic_routing.py  vector_store.py
backend/: .env.example  pyproject.toml
backend/app/: chunking.py  database.py  guardrails.py  markdown.py
backend/evaluation/: ground_truth_qa.json
backend/evaluation/results/: ablation_summary_20260404_144929.json  variant_A_20260404_142523.json  variant_A_20260404_144255.json
data/hr/: admins.csv  employees.csv
evaluation/: evaluate.py
evaluation/results/: ablation_summary_20260404_142523.csv  ablation_summary_20260404_142523.json  ablation_summary_20260404_144255.csv  ablation_summary_20260404_144255.json  ablation_summary_20260404_144531.csv  ablation_summary_20260404_144531.json  ablation_summary_20260404_144929.csv  ablation_summary_20260404_145421.csv  ablation_summary_20260404_145421.json  variant_A_20260404_144531.json  variant_A_20260404_144929.json  variant_A_20260404_145421.json
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/lib/: api.ts
