[project]
name = "assignment-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=0.1.0",
    "docling-core>=0.1.0",
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.0.0",
    "groq>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]
